[package]
name = "aoc2015"
version = "0.1.0"
authors = ["Haochuan Liu <haochuan.liu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"

day1 = {path = "problems/day1", version = "0.1.0"}
day2 = {path = "problems/day2", version = "0.1.0"}
day3 = {path = "problems/day3", version = "0.1.0"}
day4 = {path = "problems/day4", version = "0.1.0"}
day5 = {path = "problems/day5", version = "0.1.0"}
day6 = {path = "problems/day6", version = "0.1.0"}
day7 = {path = "problems/day7", version = "0.1.0"}
day8 = {path = "problems/day8", version = "0.1.0"}

